--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "version": "0.0.1",
   "dependencies": {
     "async": "^0.9.0",
+    "browser-pack": "^3.2.0",
+    "browser-unpack": "^1.0.0",
     "browserify": "^8.1.1",
     "glob": "^4.3.5",
     "gulp": "^3.8.10",
     "gulp-header": "^1.2.2",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.2",
+    "intreq": "0.0.0",
     "pd-gulp-base-task": "git://github.com/platdesign/pd-gulp-base-task",
+    "through": "^2.3.6",
+    "through2": "^0.6.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.2.1"
