--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "through2": "^0.6.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.2.1"
+    "watchify": "^2.2.1",
+    "jade": "^1.9.2",
+    "browserify-plain-jade": "^0.2.2"
   },
   "repository": ""
 }
