--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "pd-gulp-js-task",
-  "description": "pd-gulp-js-task",
-  "version": "0.0.1",
+  "name": "pd-gulp-js",
+  "description": "pd-gulp generator for js tasks",
+  "author":"Christian Blaschke <mail@platdesign.de>",
+  "version": "0.0.2",
   "dependencies": {
     "async": "^0.9.0",
     "browser-pack": "^3.2.0",
@@ -13,7 +14,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.2",
     "intreq": "0.0.0",
-    "pd-gulp-base-task": "git://github.com/platdesign/pd-gulp-base-task",
+    "pd-gulp-task-generator-generator": "*",
     "through": "^2.3.6",
     "through2": "^0.6.3",
     "vinyl-buffer": "^1.0.0",
