--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "glob": "^4.3.5",
     "gulp": "^3.8.10",
     "gulp-header": "^1.2.2",
-    "gulp-uglify": "^1.1.0",
+    "gulp-uglify": "1.1.0",
     "gulp-util": "^3.0.2",
     "intreq": "0.0.0",
     "pd-gulp-task-generator-generator": "*",
