--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.2.1",
-    "jade": "^1.9.2",
-    "browserify-plain-jade": "^0.2.2"
+    "jade": "^1.9.2"
   },
   "repository": {
     "type": "git",
