--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "browser-pack": "^3.2.0",
     "browser-unpack": "^1.0.0",
     "browserify": "^8.1.1",
+    "browserify-resolutions": "^1.0.6",
     "glob": "^4.3.5",
     "gulp": "^3.8.10",
     "gulp-header": "^1.2.2",
     "gulp-uglify": "1.1.0",
     "gulp-util": "^3.0.2",
     "intreq": "0.0.0",
+    "jade": "^1.9.2",
     "pd-gulp-task-generator-generator": "*",
     "through": "^2.3.6",
     "through2": "^0.6.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.2.1",
-    "jade": "^1.9.2"
+    "watchify": "^2.2.1"
   },
   "repository": {
     "type": "git",
