--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "async": "^0.9.0",
     "browser-pack": "^3.2.0",
     "browser-unpack": "^1.0.0",
-    "browserify": "^8.1.1",
+    "browserify": "^11.2.0",
     "browserify-resolutions": "^1.0.6",
+    "bundle-collapser": "^1.2.1",
     "glob": "^4.3.5",
     "gulp": "^3.8.10",
     "gulp-header": "^1.2.2",
@@ -21,7 +22,7 @@
     "through2": "^0.6.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.2.1"
+    "watchify": "^3.4.0"
   },
   "repository": {
     "type": "git",
